Initial setup of project with examples

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.caching=false
 org.gradle.configuration-cache=false
 
 # Plugin Metadata
-plugin_group=ExampleGroup
-plugin_description=An example plugin for Hytale!
-plugin_author=It's you!
+plugin_group=com.davdeo
+plugin_description=Plugin which adds regrowing nature to Hytale.
+plugin_author=davdeo
 plugin_website=
-plugin_main_entrypoint=com.example.exampleplugin.ExamplePlugin
+plugin_main_entrypoint=com.davdeo.naturalregrowthplugin.NaturalRegrowthPlugin
 server_version=*
